# layernorm-concept-assoc-65c1-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
artifacts/: 1904.09751_holtzman2019_text_degeneration.first5.txt  2305.02582_brody2023_layernorm_expressivity.first5.txt  2306.11167_naeini2023_only_connect_wall.first5.txt  2310.11158_chen2023_llm_divergent_association.first5.txt  2503.10622_zhu2025_transformers_without_normalization.first5.txt  2504.05228_zhang2025_noveltybench.first5.txt
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper/: OUTLINE.md
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: generation_results.tex  ocw_results.tex
papers/: README.md
research_workspace/: __init__.py
results/layernorm_study/: generation_metrics.csv  generation_stats.csv  metadata.json  ocw_metrics.csv
results/layernorm_study_pilot2/: generation_metrics.csv  generation_stats.csv  generation_summary.json  metadata.json  ocw_metrics.csv  ocw_stats.csv  ocw_summary.json
results/layernorm_study_rerun/: generation_summary.json  metadata.json  (+2 more)
src/: run_layernorm_study.py
(+12 files in other folders)
