[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "arxiv>=3.0.0",
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "transformers>=5.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
